<?xml version="1.0" encoding="utf-8"?>


<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#121212"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:minHeight="@android:dimen/notification_large_icon_height"
        android:paddingStart="?attr/actionBarSize"
        app:title="@string/settings"
        app:titleMargin="6dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="716dp"
        android:layout_marginTop="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/settings"
                android:layout_width="349dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <Switch
                    android:id="@+id/setting_turnNR"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:drawableStart="@drawable/ic_gradient_black_24dp"
                    android:drawablePadding="20dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center|start|center_horizontal"
                    android:text="@string/turn_on_system_nr"
                    android:textSize="16sp" />

                <Switch
                    android:id="@+id/setting_disablealign"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:drawableStart="@drawable/ic_format_align_justify_black_24dp"
                    android:drawablePadding="20dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/disable_aligning"
                    android:textAlignment="textStart"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/setting_framecounter"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:drawableStart="@drawable/ic_burst_mode_black_24dp"
                    android:drawablePadding="20dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:text="@string/frame_count"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

                <SeekBar
                    android:id="@+id/setting_framecnt"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginStart="30dp"
                    android:max="50"
                    android:min="1"
                    android:progress="10" />

                <TextView
                    android:id="@+id/setting_chroma"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:drawableStart="@drawable/ic_grain_black_24dp"
                    android:drawablePadding="20dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:text="@string/chroma_nr_count"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

                <SeekBar
                    android:id="@+id/setting_chromacnt"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginStart="30dp"
                    android:max="65"
                    android:min="1"
                    android:progress="12" />

                <TextView
                    android:id="@+id/setting_luma"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:drawableStart="@drawable/ic_blur_on_black_24dp"
                    android:drawablePadding="20dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:text="@string/luma_nr_count"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

                <SeekBar
                    android:id="@+id/setting_lumacnt"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginStart="30dp"
                    android:max="65"
                    android:min="1"
                    android:progress="1" />

                <Switch
                    android:id="@+id/setting_enhanced"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:drawableStart="@drawable/ic_tune_black_24dp"
                    android:drawablePadding="20dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/enhanced_processing"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <!--android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar" -->
</FrameLayout>